2010-04-22  Stas Boukarev  <stassats@gmail.com>

	* swank-backend.lisp (with-symbol): Test for package before doing
	find-symbol.
	* swank-sbcl.lisp(Multiprocessing): use with-symbol.
	(emacs-inspect t): Remove newlines from text returned by
	sb-impl::inspected-parts, otherwise there will be ".." inserted by
	the printer due to (*print-lines* 1).

2010-04-21  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-open-inspector): Use forward-line instead of
	goto-line, since it doesn't result in  "Mark set" message.
	(slime-inspector-buffer): Enable slime-mode after enabling
	slime-inspector-mode, otherwise the former will be disabled by the
	latter.

2010-04-20  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (condition-timed-wait): New helper. Use
	WITH-DEADLINE rather than WITH-TIMEOUT because the latter conses a
	new timer, and this function is called _a lot_.
	(receive-if): Use it.

2010-04-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-update-threads-buffer): Save point position
	on updates.

2010-04-20  Stas Boukarev  <stassats@gmail.com>

	* README: advertise additional contribs, especially slime-fancy.

2010-04-19  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (symbol-classification-string): New function to
	replace (symbol-classification->string (classify-symbol
	symbol)). It's faster and conses much less, while it is called
	many times by fuzzy completion and fancy inspector.
	(symbol-classification->string): Removed.
	(list-threads): Exclude the current thread only if its name is
	"worker".

2010-04-18  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-threads-update-interval): Add :group and :type
	parameters to this customization.
	Thanks to Mark Harig.

2010-04-17  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-threads-update-interval): New customization
	variable, if set to a number the threads buffer will
	updated with this interval.
	(slime-with-popup-buffer): Rename modes option to mode,