@@ -20,10 +20,13 @@ Quick setup instructions
   Make sure your `inferior-lisp-program' is set to a compatible
   version of Lisp.
 
-  slime-setup command is used also to load additional contribs, most often used
-  meta-contrib is slime-fancy, it include a better REPL, and many more nice features,
-  to load it change (slime-setup) form above to (slime-setup '(slime-fancy))
-  
+  The function `slime-setup' can also load additional, contributed
+  packages ("contribs"). The most-often used package is
+  slime-fancy.el, which primarily installs a popular set of other
+  contributed packages. It includes a better REPL, and many more nice
+  features. To load it, change the bare (slime-setup) form above to
+  (slime-setup '(slime-fancy)).
+
   Use `M-x' slime to fire up and connect to an inferior Lisp.
   SLIME will now automatically be available in your Lisp source
   buffers.
